--- a/ops/dev/neo4j/kubernetes/dns.yaml
+++ b/ops/dev/neo4j/kubernetes/dns.yaml
@@ -11,6 +11,12 @@ spec:
     - port: 7474
       targetPort: 7474
       name: browser
+    - port: 7473
+      targetPort: 7473
+      name: https
+    - port: 7687
+      targetPort: 7687
+      name: bolt
     - port: 6362
       targetPort: 6362
       name: backup
