--- a/client-api/dns.yaml
+++ b/client-api/dns.yaml
@@ -7,8 +7,9 @@ metadata:
 spec:
   selector:
     app: client-api
-  type: LoadBalancer
   ports:
-  - name: https
-    port: 443
+  - name: http
+    protocol: TCP
+    port: 8080
     targetPort: 8080
+  type: NodePort
