--- a/ops/dev/neo4j/kubernetes/nodeport.yaml
+++ b/ops/dev/neo4j/kubernetes/nodeport.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: neo4j-load-balancer
+  name: neo4j-node-port
   labels:
     app: neo4j
     component: core
@@ -9,8 +9,7 @@ spec:
   selector:
     app: neo4j
     component: core
-  clusterIP: 10.59.245.198
-  type: LoadBalancer
+  type: NodePort
   ports:
     - port: 7474
       targetPort: 7474
