feat(ops): ssl ingress deployment

--- a/ops/dev/ingress.yaml
+++ b/ops/dev/ingress.yaml
@@ -5,6 +5,8 @@ metadata:
   annotations:
     kubernetes.io/ingress.global-static-ip-name: "dev-ingress"
 spec:
+  tls:
+  - secretName: api-dev-cert
   rules:
   - host: api.dev.tangleapp.co
     http:
