--- a/client-api/package.json
+++ b/client-api/package.json
@@ -15,7 +15,7 @@
     "prepush": "yarn build && yarn lint && yarn test",
     "start": "node .compiled/index.js",
     "deploy:api:dev": "gcloud container builds submit --config cloudbuild.yaml . && kubectl apply -f ../ops/dev/client-api/deployment.yaml",
-    "deploy:api:prod": "yarn build && gcloud -q app deploy ./prod.yaml"
+    "deploy:api:prod": ""
   },
   "author": "",
   "jest": {
