--- a/client-api/package.json
+++ b/client-api/package.json
@@ -14,8 +14,8 @@
     "build": "tsc",
     "prepush": "yarn build && yarn lint && yarn test",
     "start": "node .compiled/index.js",
-    "deploy:api:dev": "gcloud container builds submit --config cloudbuild.yaml . && kubectl apply -f ../ops/dev/client-api/deployment.yaml",
-    "deploy:api:prod": ""
+    "deploy:api:dev": "gcloud container builds submit --config cloudbuild.yaml . && kubectl apply -f ../ops/dev/client-api/kubernetes/deployment.yaml",
+    "deploy:api:prod": "echo 'doesnt work'"
   },
   "author": "",
   "jest": {
