ops(web-client): adding dispatch routes and custom domain names to app engine

--- a/web-client/prod.yaml
+++ b/web-client/prod.yaml
@@ -1,7 +1,7 @@
 # [START runtime]
 runtime: python27
 threadsafe: true
-service: web-client-prod
+service: default
 
 basic_scaling:
   max_instances: 5
