--- a/ops/dev/neo4j/kubernetes/statefulset.yaml
+++ b/ops/dev/neo4j/kubernetes/statefulset.yaml
@@ -33,8 +33,6 @@ spec:
             value: "neo4j.default.svc.cluster.local:5000"
           - name: NEO4J_ACCEPT_LICENSE_AGREEMENT
             value: "yes"
-          - name: NEO4J_dbms_security_causal__clustering__status__auth__enabled
-            value: "false"
           - name: NEO4J_com_graphaware_module_ES_uri
             valueFrom:
               secretKeyRef:
@@ -45,6 +43,7 @@ spec:
           - "-ecx"
           - |
             export NEO4J_dbms_connectors_default__advertised__address=$(hostname -f)
+            export NEO4J_dbms_backup_address=$(hostname -f):6362
             export NEO4J_causal__clustering_discovery__advertised__address=$(hostname -f):5000
             export NEO4J_causal__clustering_transaction__advertised__address=$(hostname -f):6000
             export NEO4J_causal__clustering_raft__advertised__address=$(hostname -f):7000
