--- a/ops/kubernetes/neo4j/backup.yaml
+++ b/ops/kubernetes/neo4j/backup.yaml
@@ -12,19 +12,19 @@ spec:
           - name: backupdir-neo4j
             persistentVolumeClaim:
               claimName: backupdir-neo4j
-          - name: neo4j-cluster-dev
+          - name: neo4j-cluster
             secret:
-              secretName: neo4j-cluster-dev
+              secretName: neo4j-cluster
           containers:
           - name: neo4j-backup
-            image: "us.gcr.io/opit-193719/dev-neo4j-image"
+            image: "us.gcr.io/opit-193719/neo4j-image"
             env:
             - name: NEO4J_ACCEPT_LICENSE_AGREEMENT
               value: "yes"
             volumeMounts:
             - name: backupdir-neo4j
               mountPath: /tmp
-            - name: neo4j-cluster-dev
+            - name: neo4j-cluster
               mountPath: "/etc/neo4j/secrets"
               readOnly: false            
             command:
