--- a/ops/kubernetes/neo4j/statefulset.yaml
+++ b/ops/kubernetes/neo4j/statefulset.yaml
@@ -36,7 +36,7 @@ spec:
           - name: NEO4J_com_graphaware_module_ES_uri
             valueFrom:
               secretKeyRef:
-                name: client-api-elastic-auth
+                name: neo4j-elastic-auth
                 key: uri
         command:
           - "/bin/bash"
