--- a/ops/kubernetes/config/prod-config-map.yaml
+++ b/ops/kubernetes/config/prod-config-map.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  neo4ServiceIP: 10.43.249.26
+  neo4jServiceIP: 10.43.249.26
   clientApiServiceIP: 10.43.250.52
 kind: ConfigMap
 metadata:
