--- a/client-api/package.json
+++ b/client-api/package.json
@@ -14,7 +14,7 @@
     "build": "tsc",
     "prepush": "yarn build && yarn lint && yarn test",
     "start": "node .compiled/index.js",
-    "deploy:api:dev": "gcloud container builds submit --config cloudbuild.yaml . && kubectl replace -f ../ops/dev/client-api/kubernetes/deployment.yaml",
+    "deploy:api:dev": "echod 'doesnt work'",
     "deploy:api:prod": "echo 'doesnt work'"
   },
   "author": "",
