--- a/web-client/package.json
+++ b/web-client/package.json
@@ -44,6 +44,7 @@
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
+    "analyze": "source-map-explorer build/static/js/main.*",
     "schema": "apollo-codegen introspect-schema ../client-api/data-template/schema.graphql --output ./src/schema.json",
     "types": "rm -rf ./src/__generated__ && mkdir ./src/__generated__ && apollo-codegen generate ./src/**/queries.ts --addTypename --schema ./src/schema.json --target typescript --output ./src/__generated__/types.ts",
     "deploy:web:dev": "REACT_APP_ENV=development yarn build && gcloud -q app deploy ./dev.yaml",
@@ -84,6 +85,7 @@
     "babel-loader": "7.1.4",
     "babel-runtime": "^6.26.0",
     "react-test-renderer": "16.3.2",
+    "source-map-explorer": "1.5.0",
     "tachyons-cli": "1.3.0",
     "ts-loader": "3.5.0",
     "typescript": "^2.7.2"
