--- a/web-client/public/manifest.json
+++ b/web-client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Tangle",
-  "name": "Tangle Web App",
+  "name": "Tangle App",
   "icons": [
     {
       "src": "favicon.ico",
@@ -10,6 +10,6 @@
   ],
   "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#ff9e37",
+  "background_color": "#f4f4f4"
 }
