--- a/web-client/dev.yaml
+++ b/web-client/dev.yaml
@@ -37,10 +37,14 @@ handlers:
   - url: /
     static_files: build/index.html
     upload: build/index.html
+    secure: always
+    redirect_http_response_code: 301
 
   - url: /(.*)
     static_files: build/index.html
     upload: build/index.html
+    secure: always
+    redirect_http_response_code: 301
 # [END handlers]
 
 # [START skip files]
