--- a/ops/kubernetes/prod/prod-config-map.yaml
+++ b/ops/kubernetes/prod/prod-config-map.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 data:
   neo4jServiceIP: 10.43.249.26
   clientApiServiceIP: 10.43.250.52
+  client-api-env: "production"
 kind: ConfigMap
 metadata:
   name: cluster-config
