--- a/client-api/package.json
+++ b/client-api/package.json
@@ -39,6 +39,7 @@
     "cheerio": "1.0.0-rc.2",
     "continuation-local-storage": "3.2.1",
     "cors": "2.8.4",
+    "csurf": "1.9.0",
     "dedupe": "2.1.0",
     "dotenv": "5.0.1",
     "elasticsearch": "15.0.0",
@@ -47,6 +48,7 @@
     "firebase-admin": "5.12.0",
     "graphql": "0.12.3",
     "graphql-tools": "2.20.0",
+    "helmet": "3.12.1",
     "html2plaintext": "2.0.1",
     "lodash": "4.17.5",
     "moment": "2.22.0",
