--- a/client-api/package.json
+++ b/client-api/package.json
@@ -57,7 +57,8 @@
     "rotating-file-stream": "1.3.6",
     "typescript": "2.8.3",
     "uuid": "3.2.1",
-    "winston": "3.0.0"
+    "winston": "3.0.0",
+    "xss": "1.0.3"
   },
   "devDependencies": {
     "@types/body-parser": "1.17.0",
