integrating reactGA initially

--- a/web-client/package.json
+++ b/web-client/package.json
@@ -5,6 +5,25 @@
   "engine": "8.9.4",
   "description": "A web client for empowering people to capture and connect thoughts to create big ideas",
   "private": true,
+  "homepage": "./",
+  "main": "server.js",
+  "scripts": {
+    "start": "REACT_APP_ENV=development react-scripts-ts start",
+    "debug": "REACT_APP_ENV=local react-scripts-ts start",
+    "build": "react-scripts-ts build",
+    "test": "react-scripts-ts test --env=jsdom",
+    "eject": "react-scripts-ts eject",
+    "analyze": "source-map-explorer build/static/js/main.*",
+    "schema": "apollo-codegen introspect-schema ../client-api/data-template/schema.graphql --output ./src/schema.json",
+    "types": "rm -rf ./src/__generated__ && mkdir ./src/__generated__ && apollo-codegen generate ./src/**/queries.ts --addTypename --schema ./src/schema.json --target typescript --output ./src/__generated__/types.ts",
+    "deploy:web:dev": "REACT_APP_ENV=development yarn build && gcloud -q app deploy ./dev.yaml",
+    "deploy:web:prod": "REACT_APP_ENV=production yarn build && gcloud -q app deploy ./prod.yaml",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "css": "tachyons src/css/app.css > src/tachyons.css --minify",
+    "prestart": "npm run css",
+    "prebuild": "npm run css"
+  },
   "dependencies": {
     "apollo-cache-inmemory": "1.1.9",
     "apollo-client": "2.3.1",
@@ -28,6 +47,7 @@
     "react-dom": "^16.2.0",
     "react-feather": "^1.0.8",
     "react-firebaseui": "1.2.3",
+    "react-ga": "2.5.3",
     "react-resize-detector": "2.3.0",
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.13.0",
@@ -35,25 +55,6 @@
     "react-window-size": "1.0.1",
     "scroll-into-view": "1.9.3",
     "tachyons": "^4.9.1"
-  },
-  "homepage": "./",
-  "main": "server.js",
-  "scripts": {
-    "start": "REACT_APP_ENV=development react-scripts-ts start",
-    "debug": "REACT_APP_ENV=local react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject",
-    "analyze": "source-map-explorer build/static/js/main.*",
-    "schema": "apollo-codegen introspect-schema ../client-api/data-template/schema.graphql --output ./src/schema.json",
-    "types": "rm -rf ./src/__generated__ && mkdir ./src/__generated__ && apollo-codegen generate ./src/**/queries.ts --addTypename --schema ./src/schema.json --target typescript --output ./src/__generated__/types.ts",
-    "deploy:web:dev": "REACT_APP_ENV=development yarn build && gcloud -q app deploy ./dev.yaml",
-    "deploy:web:prod": "REACT_APP_ENV=production yarn build && gcloud -q app deploy ./prod.yaml",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "css": "tachyons src/css/app.css > src/tachyons.css --minify",
-    "prestart": "npm run css",
-    "prebuild": "npm run css"
   },
   "devDependencies": {
     "@firebase/app-types": "0.1.2",
