wiring up dev backup scripts

--- a/ops/kubernetes/dev/dev-config-map.yaml
+++ b/ops/kubernetes/dev/dev-config-map.yaml
@@ -3,6 +3,7 @@ data:
   neo4jServiceIP: 10.59.247.100
   clientApiServiceIP: 10.59.246.131
   client-api-env: "development"
+  neo4j-backup-location: "tangle-dev-neo4j-backup"
 kind: ConfigMap
 metadata:
   name: cluster-config
