--- a/web-client/package.json
+++ b/web-client/package.json
@@ -34,6 +34,9 @@
     "axios": "0.18.0",
     "draft-convert": "2.1.2",
     "draft-js": "0.10.5",
+    "draft-js-hashtag-plugin": "2.0.3",
+    "draft-js-linkify-plugin": "2.0.1",
+    "draft-js-plugins-editor": "2.1.1",
     "echarts": "^4.0.4",
     "echarts-for-react": "^2.0.8",
     "firebase": "4.12.1",
