--- a/client-api/package.json
+++ b/client-api/package.json
@@ -32,6 +32,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/error-reporting": "0.5.0",
     "@google-cloud/language": "1.2.0",
     "@google-cloud/storage": "1.6.0",
     "apollo-server-express": "1.3.2",
