adding cmd to dockerfile

--- a/ops/containers/gcloud/Dockerfile
+++ b/ops/containers/gcloud/Dockerfile
@@ -15,3 +15,4 @@ COPY docker-entrypoint.sh /docker-entrypoint.sh
 RUN chmod -R 777 /docker-entrypoint.sh
 
 ENTRYPOINT ["/sbin/tini", "-g", "--", "/docker-entrypoint.sh"]
+CMD [ "backup" ]
