--- a/client-api/package.json
+++ b/client-api/package.json
@@ -38,6 +38,7 @@
     "apollo-server-express": "1.3.2",
     "body-parser": "1.18.2",
     "cheerio": "1.0.0-rc.2",
+    "compression": "1.7.2",
     "continuation-local-storage": "3.2.1",
     "cors": "2.8.4",
     "dedupe": "2.1.0",
