fixing html parsing

--- a/client-api/package.json
+++ b/client-api/package.json
@@ -50,6 +50,7 @@
     "graphql": "0.12.3",
     "graphql-tools": "2.20.0",
     "helmet": "3.12.1",
+    "html-to-text": "4.0.0",
     "html2plaintext": "2.0.1",
     "lodash": "4.17.5",
     "moment": "2.22.0",
@@ -71,6 +72,7 @@
     "@types/express-formidable": "1.0.3",
     "@types/google-cloud__storage": "1.1.7",
     "@types/graphql": "0.13.1",
+    "@types/html-to-text": "1.4.31",
     "@types/jest": "22.2.3",
     "@types/morgan": "1.7.35",
     "@types/neo4j": "2.0.2",
