--- a/ops/kubernetes/dev/dev-config-map.yaml
+++ b/ops/kubernetes/dev/dev-config-map.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 data:
   neo4jServiceIP: 10.59.247.100
+  neo4jUrl: "bolt+routing://10.59.247.100:7687"
   clientApiServiceIP: 10.59.246.131
   client-api-env: "development"
   neo4j-backup-location: "tangle-dev-neo4j-backup"
