--- a/client-api/package.json
+++ b/client-api/package.json
@@ -49,6 +49,8 @@
     "firebase-admin": "5.12.0",
     "graphql": "0.12.3",
     "graphql-tools": "2.20.0",
+    "hast-util-to-html": "3.1.0",
+    "hast-util-to-string": "1.0.1",
     "helmet": "3.12.1",
     "html-to-text": "4.0.0",
     "html2plaintext": "2.0.1",
@@ -56,9 +58,12 @@
     "moment": "2.22.0",
     "morgan": "1.9.0",
     "neo4j-driver": "1.5.3",
+    "rehype-parse": "4.1.0",
     "request-context": "2.0.0",
+    "retext-stringify": "2.0.0",
     "rotating-file-stream": "1.3.6",
     "typescript": "2.8.3",
+    "unified": "7.0.0",
     "uuid": "3.2.1",
     "winston": "3.0.0",
     "xss": "1.0.3"
