--- a/client-api/package.json
+++ b/client-api/package.json
@@ -45,7 +45,6 @@
     "dotenv": "5.0.1",
     "elasticsearch": "15.0.0",
     "express": "4.16.2",
-    "express-formidable": "1.0.0",
     "firebase-admin": "5.12.0",
     "graphql": "0.12.3",
     "graphql-tools": "2.20.0",
@@ -57,6 +56,7 @@
     "lodash": "4.17.5",
     "moment": "2.22.0",
     "morgan": "1.9.0",
+    "multer": "1.3.1",
     "neo4j-driver": "1.5.3",
     "rehype-parse": "4.1.0",
     "request-context": "2.0.0",
