--- a/client-api/package.json
+++ b/client-api/package.json
@@ -53,6 +53,7 @@
     "helmet": "3.12.1",
     "html-to-text": "4.0.0",
     "html2plaintext": "2.0.1",
+    "kue": "0.11.6",
     "lodash": "4.17.5",
     "moment": "2.22.0",
     "morgan": "1.9.0",
@@ -79,6 +80,7 @@
     "@types/graphql": "0.13.1",
     "@types/html-to-text": "1.4.31",
     "@types/jest": "22.2.3",
+    "@types/kue": "0.11.9",
     "@types/morgan": "1.7.35",
     "@types/neo4j": "2.0.2",
     "@types/node": "10.3.4",
