--- a/client-api/package.json
+++ b/client-api/package.json
@@ -75,13 +75,13 @@
     "@types/continuation-local-storage": "3.2.1",
     "@types/elasticsearch": "5.0.24",
     "@types/express": "4.11.1",
-    "@types/express-formidable": "1.0.3",
     "@types/google-cloud__storage": "1.1.7",
     "@types/graphql": "0.13.1",
     "@types/html-to-text": "1.4.31",
     "@types/jest": "22.2.3",
     "@types/kue": "0.11.9",
     "@types/morgan": "1.7.35",
+    "@types/multer": "1.3.7",
     "@types/neo4j": "2.0.2",
     "@types/node": "10.3.4",
     "@types/winston": "2.3.9",
