--- a/client-api/package.json
+++ b/client-api/package.json
@@ -59,6 +59,7 @@
     "morgan": "1.9.0",
     "multer": "1.3.1",
     "neo4j-driver": "1.5.3",
+    "promise-timeout": "1.3.0",
     "rehype-parse": "4.1.0",
     "request-context": "2.0.0",
     "retext-stringify": "2.0.0",
@@ -84,6 +85,7 @@
     "@types/multer": "1.3.7",
     "@types/neo4j": "2.0.2",
     "@types/node": "10.3.4",
+    "@types/promise-timeout": "1.3.0",
     "@types/winston": "2.3.9",
     "graphql-request": "1.5.1",
     "jest": "22.4.3",
