--- a/web-client/package.json
+++ b/web-client/package.json
@@ -9,7 +9,7 @@
   "main": "server.js",
   "scripts": {
     "start": "REACT_APP_ENV=development react-scripts-ts start",
-    "debug": "REACT_APP_ENV=local react-scripts-ts start",
+    "debug": "yarn prestart && REACT_APP_ENV=local react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
