--- a/web-client/package.json
+++ b/web-client/package.json
@@ -59,6 +59,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.13.0",
     "react-timeago": "4.1.9",
+    "react-toastify": "4.1.0",
     "react-tooltip": "3.5.1",
     "react-window-size": "1.0.1",
     "scroll-into-view": "1.9.3",
