--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -18,5 +18,5 @@
   ],
   "permissions": ["tabs", "activeTab", "http://*/*", "https://*/*"],
   "content_security_policy":
-    "script-src 'self' 'unsafe-eval'; object-src 'self'"
+    "script-src 'self' https://apis.google.com 'unsafe-eval'; object-src 'self'"
 }
