--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -9,6 +9,8 @@
   },
   "devDependencies": {
     "@types/chrome": "0.0.71",
+    "@types/firebase": "3.2.1",
+    "@types/isomorphic-fetch": "0.0.34",
     "copy-webpack-plugin": "4.5.2",
     "ts-loader": "4.4.2",
     "typescript": "3.1.0-dev.20180728",
@@ -17,6 +19,8 @@
   },
   "dependencies": {
     "@types/node": "10.5.4",
+    "firebase": "5.3.0",
+    "isomorphic-fetch": "2.2.1",
     "mozilla-readability": "git://github.com/mozilla/readability.git"
   }
 }
