--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -4,23 +4,35 @@
   "license": "ISC",
   "private": true,
   "scripts": {
-    "dev": "webpack -w -d",
-    "build": "webpack -p"
+    "start": "webpack -w -d",
+    "build": "webpack -p",
+    "css": "tachyons src/css/app.css > src/app.css --minify",
+    "prestart": "npm run css",
+    "prebuild": "npm run css"
   },
   "devDependencies": {
     "@types/chrome": "0.0.71",
     "@types/firebase": "3.2.1",
     "@types/isomorphic-fetch": "0.0.34",
+    "@types/node": "10.5.4",
+    "@types/react": "16.4.7",
+    "@types/react-dom": "16.0.6",
     "copy-webpack-plugin": "4.5.2",
+    "css-loader": "1.0.0",
+    "extract-text-webpack-plugin": "3.0.2",
+    "style-loader": "0.21.0",
+    "tachyons": "4.11.1",
+    "tachyons-cli": "1.3.2",
     "ts-loader": "4.4.2",
     "typescript": "3.1.0-dev.20180728",
     "webpack": "4.16.3",
     "webpack-cli": "3.1.0"
   },
   "dependencies": {
-    "@types/node": "10.5.4",
     "firebase": "5.3.0",
     "isomorphic-fetch": "2.2.1",
-    "mozilla-readability": "git://github.com/mozilla/readability.git"
+    "mozilla-readability": "git://github.com/mozilla/readability.git",
+    "react": "16.4.1",
+    "react-dom": "16.4.1"
   }
 }
