--- a/chrome-extension/tsconfig.json
+++ b/chrome-extension/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "outDir": "./build/",
     "sourceMap": true,
     "noImplicitAny": false,
@@ -7,5 +8,6 @@
     "target": "es5",
     "jsx": "react",
     "allowJs": true
-  }
+  },
+  "include": ["./src/**/**/*"]
 }
