--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -14,6 +14,7 @@
     "@types/chrome": "0.0.71",
     "@types/firebase": "3.2.1",
     "@types/isomorphic-fetch": "0.0.34",
+    "@types/lodash": "4.14.115",
     "@types/node": "10.5.4",
     "@types/react": "16.4.7",
     "@types/react-dom": "16.0.6",
@@ -31,6 +32,7 @@
   "dependencies": {
     "firebase": "5.3.0",
     "isomorphic-fetch": "2.2.1",
+    "lodash": "4.17.10",
     "mozilla-readability": "git://github.com/mozilla/readability.git",
     "react": "16.4.1",
     "react-dom": "16.4.1"
