--- a/client-api/package.json
+++ b/client-api/package.json
@@ -4,7 +4,7 @@
   "description": "graphql server",
   "main": "index.js",
   "engines": {
-    "node": "8.9.4",
+    "node": "10.15.0",
     "yarn": "1.5.1"
   },
   "scripts": {
@@ -14,6 +14,7 @@
     "build": "tsc",
     "prepush": "yarn build && yarn lint && yarn test",
     "start": "node .compiled/index.js",
+    "start:local": "NODE_ENV=local node .compiled/index.js",
     "deploy:api:dev": "echod 'doesnt work'",
     "deploy:api:prod": "echo 'doesnt work'"
   },
@@ -45,7 +46,6 @@
     "dotenv": "5.0.1",
     "elasticsearch": "15.0.0",
     "express": "4.16.2",
-    "firebase-admin": "5.12.0",
     "graphql": "0.12.3",
     "graphql-tools": "2.20.0",
     "hast-util-to-html": "3.1.0",
@@ -64,7 +64,7 @@
     "request-context": "2.0.0",
     "retext-stringify": "2.0.0",
     "rotating-file-stream": "1.3.6",
-    "typescript": "2.8.3",
+    "typescript": "^3.3.3",
     "unified": "7.0.0",
     "uuid": "3.2.1",
     "winston": "3.0.0",
@@ -77,7 +77,7 @@
     "@types/elasticsearch": "5.0.24",
     "@types/express": "4.11.1",
     "@types/google-cloud__storage": "1.1.7",
-    "@types/graphql": "0.13.1",
+    "@types/graphql": "^14.0.5",
     "@types/html-to-text": "1.4.31",
     "@types/jest": "22.2.3",
     "@types/kue": "0.11.9",
