--- a/web-client/package.json
+++ b/web-client/package.json
@@ -14,8 +14,7 @@
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
     "analyze": "source-map-explorer build/static/js/main.*",
-    "schema": "apollo-codegen introspect-schema ../client-api/data-template/schema.graphql --output ./src/schema.json",
-    "types": "rm -rf ./src/__generated__ && mkdir ./src/__generated__ && apollo-codegen generate ./src/**/queries.ts --addTypename --schema ./src/schema.json --target typescript --output ./src/__generated__/types.ts",
+    "types": "rm -rf src/__generated__/* && apollo client:codegen ./src/__generated__/types.ts --endpoint=http://api.tangleapp.co:8080/graphql --includes=src/**/queries.ts --target=typescript --outputFlat",
     "deploy:web:dev": "REACT_APP_ENV=development yarn build && gcloud -q app deploy ./dev.yaml",
     "deploy:web:prod": "REACT_APP_ENV=production yarn build && gcloud -q app deploy ./prod.yaml",
     "deploy:web:maintenance": "REACT_APP_ENV=production REACT_APP_MAINTENANCE=true yarn build && gcloud -q app deploy ./prod.yaml",
@@ -26,77 +25,80 @@
     "prebuild": "npm run css"
   },
   "dependencies": {
-    "apollo-cache-inmemory": "1.1.9",
-    "apollo-client": "2.3.1",
-    "apollo-link-context": "1.0.7",
-    "apollo-link-error": "1.0.9",
-    "apollo-link-http": "1.5.2",
-    "apollo-link-retry": "2.2.3",
+    "apollo": "^2.11.0",
+    "apollo-cache-inmemory": "1.5.1",
+    "apollo-client": "2.5.1",
+    "apollo-link-context": "1.0.17",
+    "apollo-link-error": "1.1.10",
+    "apollo-link-http": "1.5.14",
+    "apollo-link-retry": "2.2.13",
     "axios": "0.18.0",
-    "draft-convert": "2.1.2",
+    "draft-convert": "2.1.4",
     "draft-js": "0.10.5",
     "draft-js-hashtag-plugin": "2.0.3",
-    "draft-js-inline-toolbar-plugin": "2.0.3",
+    "draft-js-inline-toolbar-plugin": "3.0.0",
     "draft-js-linkify-plugin": "2.0.1",
-    "draft-js-markdown-shortcuts-plugin": "0.4.1",
+    "draft-js-markdown-shortcuts-plugin": "0.5.0",
     "draft-js-plugins-editor": "2.1.1",
     "echarts": "^4.0.4",
-    "echarts-for-react": "^2.0.8",
-    "graphql": "0.13.0",
-    "graphql-tag": "2.8.0",
+    "echarts-for-react": "^2.0.15-beta.0",
+    "firebase": "^6.0.2",
+    "fsevents": "^2.0.6",
+    "graphql": "14.3.0",
+    "graphql-tag": "2.10.1",
     "lodash": "^4.17.5",
-    "prop-types": "15.6.1",
+    "prop-types": "15.7.2",
     "qs": "^6.5.1",
     "react": "^16.2.0",
-    "react-apollo": "2.0.4",
-    "react-device-detect": "1.5.8",
+    "react-apollo": "2.5.5",
+    "react-device-detect": "1.6.2",
     "react-dom": "^16.2.0",
     "react-feather": "^1.0.8",
-    "react-firebaseui": "1.2.3",
-    "react-ga": "2.5.3",
-    "react-resize-detector": "2.3.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts-ts": "2.13.0",
-    "react-timeago": "4.1.9",
-    "react-toastify": "4.1.0",
-    "react-tooltip": "3.5.1",
-    "react-window-size": "1.0.1",
-    "scroll-into-view": "1.9.3",
-    "tachyons": "^4.9.1"
+    "react-firebaseui": "^3.1.2",
+    "react-ga": "2.5.7",
+    "react-resize-detector": "4.1.3",
+    "react-router-dom": "^5.0.0",
+    "react-scripts-ts": "^3.1.0",
+    "react-timeago": "4.4.0",
+    "react-toastify": "5.1.0",
+    "react-tooltip": "3.10.0",
+    "react-window-size": "1.2.2",
+    "scroll-into-view": "1.9.7",
+    "tachyons": "^4.9.1",
+    "typescript": "^3.4.5"
   },
   "devDependencies": {
-    "@firebase/app-types": "0.1.2",
-    "@storybook/addon-actions": "^3.4.3",
-    "@storybook/addon-knobs": "3.4.3",
-    "@storybook/addon-links": "^3.4.3",
-    "@storybook/addon-storyshots": "3.4.3",
-    "@storybook/addons": "^3.4.3",
-    "@storybook/react": "^3.4.3",
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/runtime": "^7.4.4",
+    "@firebase/app-types": "^0.4.0",
+    "@storybook/addon-actions": "^5.0.11",
+    "@storybook/addon-knobs": "5.0.11",
+    "@storybook/addon-links": "^5.0.11",
+    "@storybook/addon-storyshots": "5.0.11",
+    "@storybook/addons": "^5.0.11",
+    "@storybook/react": "^5.0.11",
     "@types/axios": "0.14.0",
-    "@types/draft-js": "0.10.23",
-    "@types/echarts": "^0.0.12",
-    "@types/graphql": "0.12.4",
-    "@types/jest": "^22.1.3",
+    "@types/draft-js": "0.10.31",
+    "@types/echarts": "^4.1.9",
+    "@types/graphql": "14.2.0",
+    "@types/jest": "^24.0.12",
     "@types/lodash": "^4.14.104",
-    "@types/node": "^9.4.6",
+    "@types/node": "^12.0.0",
     "@types/react": "^16.0.38",
     "@types/react-dom": "^16.0.4",
-    "@types/react-router": "^4.0.22",
+    "@types/react-router": "^5.0.0",
     "@types/react-router-dom": "^4.2.4",
-    "@types/react-test-renderer": "16.0.1",
-    "@types/storybook__addon-actions": "3.0.3",
-    "@types/storybook__addon-knobs": "3.3.1",
-    "@types/storybook__addon-links": "3.3.0",
-    "@types/storybook__addon-storyshots": "3.4.0",
-    "@types/storybook__react": "3.0.7",
-    "apollo-codegen": "0.19.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "7.1.4",
-    "babel-runtime": "^6.26.0",
-    "react-test-renderer": "16.3.2",
-    "source-map-explorer": "1.5.0",
-    "tachyons-cli": "1.3.0",
-    "ts-loader": "3.5.0",
-    "typescript": "^2.7.2"
+    "@types/react-test-renderer": "16.8.1",
+    "@types/storybook__addon-actions": "3.4.2",
+    "@types/storybook__addon-knobs": "5.0.0",
+    "@types/storybook__addon-links": "3.3.4",
+    "@types/storybook__addon-storyshots": "4.0.0",
+    "@types/storybook__react": "4.0.1",
+    "babel-loader": "^8.0.5",
+    "react-test-renderer": "16.8.6",
+    "source-map-explorer": "1.8.0",
+    "tachyons-cli": "1.3.2",
+    "ts-loader": "6.0.0"
   }
 }
